# NxAgent

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: agent_architecture.md  developer_guide.md  full_agent_summary.md  installation_guide.md  llm_integration.md  operator_manual.md  project_summary.md  user_manual.md
include/: nx_agent_anomaly.h  nx_agent_config.h  nx_agent_llm.h  nx_agent_metadata.h  nx_agent_plugin.h  nx_agent_reasoning.h  nx_agent_response.h  nx_agent_strategy.h  nx_agent_system.h  nx_agent_utils.h
src/: nx_agent_anomaly.cpp  nx_agent_config.cpp  nx_agent_integrated.cpp  nx_agent_llm.cpp  nx_agent_main.cpp  nx_agent_metadata.cpp  nx_agent_plugin.cpp  nx_agent_reasoning.cpp  nx_agent_response.cpp  nx_agent_strategy.cpp  nx_agent_system.cpp  nx_agent_utils.cpp
tests/: CMakeLists.txt  nx_agent_test.cpp
